fixe title style overflow

--- a/src/assets/css/sh.css
+++ b/src/assets/css/sh.css
@@ -1,6 +1,6 @@
-:root { 
+:root {
   /* theme colors */
-  --md-primary-fg-color:               #8c1515; 
+  --md-primary-fg-color:               #8c1515;
   --md-primary-fg-color--light:        #b1040e;
   --md-primary-fg-color--dark:         #820000;
 
@@ -20,6 +20,10 @@
 }
 .md-header-nav__title {
   padding: 0;
+}
+.md-header-nav__title > .md-ellipsis,
+.md-header-nav__topic > .md-ellipsis {
+  overflow: visible;
 }
 
 /* Sherlock admonition */
